Update AxAPI, start work again