@@ -9,7 +9,6 @@ import com.artillexstudios.axminions.minions.MinionArea;
 import com.artillexstudios.axminions.minions.MinionTicker;
 import com.artillexstudios.axminions.minions.MinionWorldCache;
 import com.artillexstudios.axminions.utils.ChunkPos;
-import it.unimi.dsi.fastutil.objects.Object2ObjectArrayMap;
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 
 public final class FoliaMinionTicker implements MinionTicker {
@@ -22,9 +21,11 @@ public final class FoliaMinionTicker implements MinionTicker {
             event.begin();
             for (MinionArea world : MinionWorldCache.worlds()) {
                 world.forEachPos(position -> {
-                    if (!position.isTicking()) return;
+                    if (!position.isTicking()) {
+                        return;
+                    }
 
-                    tickChunk(position);
+                    this.tickChunk(position);
                 });
             }
             event.commit();
@@ -33,17 +34,26 @@ public final class FoliaMinionTicker implements MinionTicker {
 
     private void tickChunk(ChunkPos position) {
         ObjectArrayList<Minion> minions = position.minions();
-        int minionSize = minions.size();
-        if (minionSize == 0) return;
+        int minionSize;
+        Minion first;
+        synchronized (minions) {
+            minionSize = minions.size();
+            if (minionSize == 0) {
+                return;
+            }
 
-        Minion first = minions.get(0);
+            first = minions.getFirst();
+        }
+
         Scheduler.get().executeAt(first.location(), () -> {
             // We already have the first, why not tick it?
             first.tick();
-
-            for (int i = 1; i < minionSize; i++) {
-                Minion minion = minions.get(i);
-                minion.tick();
+            synchronized (minions) {
+                int newSize = minions.size();
+                for (int i = 1; i < newSize; i++) {
+                    Minion minion = minions.get(i);
+                    minion.tick();
+                }
             }
         });
     }
